Fixed alignment

--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ p {
 .intro {
   margin: 0 auto;
   vertical-align: top;
-  padding: .5em 1em;
+  padding: 10px;
   display: block;
   text-align: justify;
   width: 70%;
@@ -28,7 +28,11 @@ p {
 .main-box {
   margin: 0 10px;
   height: 80%;
-  width: 400px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  max-width: 500px;
+
 }
 
 .wrapper {
@@ -40,8 +44,9 @@ p {
   height: 150px;
   width: 150px;
   line-height: 60px;
-  margin: 2%;
-  display: inline-block;
+  margin: 0;
+  padding: 0;
+  /*display: inline-block;*/
 }
 
 .main-box-item a {
